--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "dev:raw": "vite --config vite.debug.config.ts",
+    "build:raw": "tsc && vite build --config vite.debug.config.ts"
   },
   "devDependencies": {
     "typescript": "~5.8.3",
